# glsp-mcp

./: .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE-ANALYSIS.md  CLAUDE.md  Cargo.toml  DEPENDENCIES-UPGRADE.md  LICENSE_HEADER.txt  LINTING-REPORT.md  PRE_COMMIT.md  README.md  TEST-REPORT.md  TESTING.md  package.json  setup-pre-commit.sh
.github/workflows/: build-universal-mac.yml  ci.yml  pre-commit.yml  release.yml
docs/: Makefile  STATUS-main.md  STATUS-pre-commit-debugging.md  STATUS-ralf-main.md  STATUS.md  requirements.txt
docs/source/: conf.py  index.rst
glsp-mcp-server/: Cargo.toml
glsp-mcp-server/.claude/: settings.local.json
glsp-mcp-server/diagrams/: New WASM 2025-06-28.glsp.json  New WASM 2025-06-28.glsp.layout.json
glsp-mcp-server/src/: backend.rs  lib.rs  main.rs  persistence.rs
glsp-mcp-server/src/database/: config.rs  dataset.rs  error.rs  factory.rs  factory_tests.rs  influxdb.rs  mod.rs  models.rs  postgresql.rs  redis.rs  tests.rs  traits.rs
glsp-mcp-server/src/mcp/: mod.rs  prompts.rs  protocol.rs  resources.rs  tools.rs
glsp-mcp-server/src/model/: mod.rs
glsp-mcp-server/src/operations/: mod.rs
glsp-mcp-server/src/selection/: mod.rs
glsp-mcp-server/src/validation/: mod.rs
glsp-mcp-server/src/wasm/: execution_engine.rs  filesystem_watcher.rs  graphics_renderer.rs  mod.rs  pipeline.rs  security_scanner.rs  sensor_bridge.rs  simulation.rs  wit_analyzer.rs
glsp-mcp-server/tests/: mock_wasm_components.rs  simple_integration_test.rs
glsp-tauri/: build-macos.sh  package.json
glsp-tauri/src-tauri/: Cargo.toml  tauri.conf.json
glsp-web-client/: .eslintrc.json  ARCHITECTURE-ASSESSMENT.md  FEATURE-ANALYSIS-AND-PROPOSAL.md  FRONTEND-TESTING.md  IMPLEMENTATION-PROGRESS.md  PHASE-5-ENHANCEMENTS.md  QUICK-FIXES.md  README-PLANNED-FEATURES.md  SERVER_SIDE_SEARCH_TOOLS.md  UI-IMPROVEMENTS-GUIDE.md  check-app-state.js  debug.html  index.html  package-lock.json  package.json  properties-panel-fix.md  site.webmanifest  test-advanced-search.html  test-animation-system-final.html  test-animations.html  test-graphics-animation.html  test-graphics-integration.html  test-graphics.html  test-performance.html  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
glsp-web-client/diagrams/: New uml-class Diagram.glsp.json  New uml-class Diagram.glsp.layout.json  New wasm-component Diagram.glsp.json  Sample Workflow.glsp.json  (+2 more)
tasklist_mcp_client/: Cargo.toml
workspace/: .gitignore
(+255 files in other folders)
